--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -1,5 +1,10 @@
-@import "navigation.css";
-@import "form.css";
-@import "dashboard.css";
-@import "details.css";
-@import "search.css";
+@import url(./home.css);
+@import url(./catalog.css);
+@import url(./login.css);
+@import url(./register.css);
+@import url(./about.css);
+@import url(./details.css);
+@import url(./404.css);
+@import url(./create.css);
+@import url(./edit.css);
+@import url(./profile.css);
