--- a/src/views/devices/details.hbs
+++ b/src/views/devices/details.hbs
@@ -29,13 +29,13 @@
         {{#if isAuthenticated}}
         <div class="product-actions">
             {{#if isCreator}}
-            <button class="btn edit"><a href="/devices/{{recipe.id}}/edit">Edit</a></button>
-            <button class="btn delete"><a href="/devices/{{recipe.id}}/delete">Delete</a></button>
+            <button class="btn edit"><a href="/devices/{{device.id}}/edit">Edit</a></button>
+            <button class="btn delete"><a href="/devices/{{device.id}}/delete">Delete</a></button>
             {{else}}
                 {{#if isPrefered}}
                 <p class="prefer-message">You've already preferred this device</p>
                 {{else}}
-                <button class="btn prefer"><a href="/devices/{{recipe.id}}/prefer">Prefer</a></button>
+                <button class="btn prefer"><a href="/devices/{{device.id}}/prefer">Prefer</a></button>
                 {{/if}}
             {{/if}}
         </div>
