add Device edit logic

--- a/src/views/devices/details.hbs
+++ b/src/views/devices/details.hbs
@@ -13,7 +13,7 @@
                 <img src="{{device.image}}" alt="Laptop">
             </div>
             <div class="product-info">
-                <h3>Brand: Acer</h3>
+                <h3>Brand: {{device.brand}}</h3>
                 <p><strong>Model:</strong> {{device.model}}</p>
                 <p><strong>Hard Disk:</strong> {{device.hardDisk}}</p>
                 <p><strong>Screen Size:</strong> {{device.screenSize}} inches</p>
