--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -18,7 +18,7 @@
                     <li><a href="/devices/catalog">Catalog</a></li>
                     <li><a href="/about">About</a></li>
                     {{#if isAuthenticated}}
-                    <li><a href="/devices/profile">Profile</a></li>
+                    <li><a href="/auth/profile">Profile</a></li>
                     <li><a href="/devices/create">Create Offer</a></li>
                     <li><a href="/auth/logout">Logout</a></li>
                     {{else}}
